tests/parser-test-files/parse-pattern.txt
================================================================================
Invalid pattern
================================================================================

(package test-package)

(define f
  (let #C(1 2) = x)
  Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:7
   |
 4 |    (let #C(1 2) = x)
   |         ^^^^^^^ unknown pattern literal

================================================================================
Invalid pattern
================================================================================

(package test-package)

(define f
  (let (x y . z) = g)
  Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:7
   |
 4 |    (let (x y . z) = g)
   |         ^^^^^^^^^ unexpected dotted list

================================================================================
Invalid pattern
================================================================================

(package test-package)

(define f
  (let (5 x y) = g)
  Unit)

--------------------------------------------------------------------------------

error: Invalid pattern
  --> test:4:8
   |
 4 |    (let (5 x y) = g)
   |          ^ invalid constructor in pattern
